--- a/app/src/main/res/layout/activity_book_maraton_add.xml
+++ b/app/src/main/res/layout/activity_book_maraton_add.xml
@@ -25,31 +25,33 @@
             android:textStyle="bold"
             android:textColor="@color/black" />
         <EditText
-            android:id="@+id/et_maraton_search"
+            android:id="@+id/et_maraton_add_search"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:ems="13"
             android:hint="책 검색을 해주세요!" />
         <ImageButton
-            android:id="@+id/btn_maraton_search"
+            android:id="@+id/btn_maraton_add_search"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_gravity="center"
             android:background="@drawable/ic_search" />
     </LinearLayout>
+    <!--
     <ScrollView
         android:id="@+id/scroll_maraton_search"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:scrollbars="vertical">
+        -->
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_maraton_search"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scrollbars="vertical"
-            app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
-    </ScrollView>
+            android:scrollbars="vertical"/>
+    <!--android:layout_weight="1"-->
+    <!--</ScrollView>-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
