--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -66,13 +66,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:background="@color/lightGray">
 
             <EditText
                 android:id="@+id/edittext_chat"
                 android:layout_width="0dp"
                 android:layout_height="60dp"
-                android:layout_weight="8" />
+                android:layout_weight="8"
+                android:hint="채팅해보세요!"/>
 
             <Button
                 android:id="@+id/btn_chat_send"
