--- a/app/src/main/res/layout/item_chat_room.xml
+++ b/app/src/main/res/layout/item_chat_room.xml
@@ -22,7 +22,8 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="@drawable/primarysetting">
 
             <TextView
                 android:id="@+id/text_view_chat_room_item_room_title"
